[gd_scene load_steps=21 format=2]

[ext_resource path="res://tileset.png" type="Texture" id=1]
[ext_resource path="res://level alt.gd" type="Script" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]
[ext_resource path="res://player.png" type="Texture" id=4]
[ext_resource path="res://game.gd" type="Script" id=5]
[ext_resource path="res://small_pixel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://beep.mp3" type="AudioStream" id=7]
[ext_resource path="res://boom.mp3" type="AudioStream" id=8]
[ext_resource path="res://reverse.mp3" type="AudioStream" id=9]
[ext_resource path="res://bip.mp3" type="AudioStream" id=10]
[ext_resource path="res://UI.gd" type="Script" id=11]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 1, 1, 0, 1, 0, 0, 1, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 1, 0, 1, 1, 0, 1 )

[sub_resource type="TileSet" id=2]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 1, 1 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 1, 0, 1, 1 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 2, 0, 1, 1 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="CircleShape2D" id=11]
radius = 1.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 0.4, 0.2 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=9]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 5 )
story = true

[node name="Level" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 1, 1 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 196608, 1, 0, 196609, 1, 0, 196610, 0, 0, 196611, 0, 0, 196612, 1, 0, 196613, 1, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 1, 0, 196618, 1, 0, 196619, 0, 0, 196620, 0, 0, 196621, 1, 0, 196622, 1, 0, 196623, 0, 0, 196624, 0, 0, 196625, 1, 0, 196626, 1, 0, 196627, 0, 0, 196628, 0, 0, 196629, 1, 0, 196630, 1, 0, 196631, 0, 0, 196632, 0, 0, 196633, 1, 0, 196634, 1, 0, 196635, 0, 0, 196636, 0, 0, 196637, 1, 0, 196638, 1, 0, 196639, 0, 0, 196640, 0, 0, 262144, 1, 0, 262145, 0, 0, 262146, 1, 0, 262147, 0, 0, 262148, 1, 0, 262149, 0, 0, 262150, 1, 0, 262151, 0, 0, 262152, 0, 0, 262153, 1, 0, 262154, 0, 0, 262155, 1, 0, 262156, 0, 0, 262157, 1, 0, 262158, 0, 0, 262159, 1, 0, 262160, 0, 0, 262161, 1, 0, 262162, 0, 0, 262163, 1, 0, 262164, 0, 0, 262165, 1, 0, 262166, 0, 0, 262167, 1, 0, 262168, 0, 0, 262169, 1, 0, 262170, 0, 0, 262171, 1, 0, 262172, 0, 0, 262173, 1, 0, 262174, 0, 0, 262175, 1, 0, 262176, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 2229128, 0, 0 )
script = ExtResource( 2 )

[node name="Beep" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource( 7 )
volume_db = -16.0
pitch_scale = 2.34
bus = "Music"

[node name="Boop" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource( 7 )
volume_db = -15.0
pitch_scale = 2.34
bus = "Music"

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 150, -1 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_h_enabled = true
offset_v = 0.2
drag_margin_left = 1.0
drag_margin_right = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 11 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 0.2 )
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 4 )

[node name="Polygon2D" type="Polygon2D" parent="Player"]

[node name="Boom" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 8 )

[node name="Bip" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 10 )
volume_db = -5.0
pitch_scale = 1.2

[node name="Build" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 9 )
volume_db = -7.0

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="Controls" type="Control" parent="UI"]
margin_left = 56.0
margin_right = 96.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="PanelContainer" parent="UI/Controls"]
margin_left = 802.0
margin_right = 1084.0
margin_bottom = 190.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UI/Controls/Panel3"]
margin_left = 5.0
margin_top = 5.0
margin_right = 277.0
margin_bottom = 185.0
custom_constants/hseparation = 15
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_right = 233.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "change automaton"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_left = 248.0
margin_right = 262.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "a"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_top = 23.0
margin_right = 233.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "change neighborhood"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="13" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_left = 248.0
margin_top = 23.0
margin_right = 262.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "n"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_top = 46.0
margin_right = 233.0
margin_bottom = 65.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "change initial state"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_left = 248.0
margin_top = 46.0
margin_right = 262.0
margin_bottom = 65.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "i"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_top = 69.0
margin_right = 233.0
margin_bottom = 88.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "previous rule"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="12" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_left = 248.0
margin_top = 69.0
margin_right = 262.0
margin_bottom = 88.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "["
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_top = 92.0
margin_right = 233.0
margin_bottom = 111.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "next rule"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="14" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_left = 248.0
margin_top = 92.0
margin_right = 262.0
margin_bottom = 111.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_top = 115.0
margin_right = 233.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "random rule"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="11" type="Label" parent="UI/Controls/Panel3/GridContainer"]
margin_left = 248.0
margin_top = 115.0
margin_right = 262.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "p"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="PanelContainer" parent="UI/Controls"]
anchor_right = 1.0
margin_left = 1078.0
margin_right = 1183.0
margin_bottom = 189.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UI/Controls/Panel4"]
margin_left = 5.0
margin_top = 5.0
margin_right = 140.0
margin_bottom = 185.0
custom_constants/hseparation = 15
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_right = 63.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "left"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_left = 78.0
margin_right = 135.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_top = 23.0
margin_right = 63.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "right"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="17" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_left = 78.0
margin_top = 23.0
margin_right = 135.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_top = 46.0
margin_right = 63.0
margin_bottom = 65.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "jump"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_left = 78.0
margin_top = 46.0
margin_right = 135.0
margin_bottom = 65.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_top = 69.0
margin_right = 63.0
margin_bottom = 88.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "bomb"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="11" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_left = 78.0
margin_top = 69.0
margin_right = 135.0
margin_bottom = 88.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_top = 92.0
margin_right = 63.0
margin_bottom = 111.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "slow"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="12" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_left = 78.0
margin_top = 92.0
margin_right = 135.0
margin_bottom = 111.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "shift"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_top = 115.0
margin_right = 63.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "reset"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="13" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_left = 78.0
margin_top = 115.0
margin_right = 135.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "r"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_top = 138.0
margin_right = 63.0
margin_bottom = 157.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "mute"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="14" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_left = 78.0
margin_top = 138.0
margin_right = 135.0
margin_bottom = 157.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "m"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="15" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_top = 161.0
margin_right = 63.0
margin_bottom = 180.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "hide"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="16" type="Label" parent="UI/Controls/Panel4/GridContainer"]
margin_left = 78.0
margin_top = 161.0
margin_right = 135.0
margin_bottom = 180.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="UI/Controls"]
margin_left = 812.0
margin_top = 155.0
margin_right = 1066.0
margin_bottom = 196.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "enter  a number to
jump to a rule"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowControls" type="PanelContainer" parent="UI"]
visible = false
margin_left = 1075.0
margin_right = 1280.0
margin_bottom = 29.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/ShowControls"]
margin_left = 5.0
margin_top = 5.0
margin_right = 200.0
margin_bottom = 24.0
custom_constants/separation = 15

[node name="2" type="Label" parent="UI/ShowControls/HBoxContainer2"]
margin_right = 166.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "show controls"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rule" type="Label" parent="UI/ShowControls/HBoxContainer2"]
margin_left = 181.0
margin_right = 195.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "c"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="UI"]
margin_right = 426.0
margin_bottom = 98.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UI/Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 421.0
margin_bottom = 93.0
custom_constants/hseparation = 15
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="UI/Panel/GridContainer"]
margin_right = 150.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "automaton"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="automaton" type="Label" parent="UI/Panel/GridContainer"]
margin_left = 165.0
margin_right = 416.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "classic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="UI/Panel/GridContainer"]
margin_top = 23.0
margin_right = 150.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "neighborhood"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="neighborhood" type="Label" parent="UI/Panel/GridContainer"]
margin_left = 165.0
margin_top = 23.0
margin_right = 416.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "nearest neighbor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="UI/Panel/GridContainer"]
margin_top = 46.0
margin_right = 150.0
margin_bottom = 65.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "initial state"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="initial_state" type="Label" parent="UI/Panel/GridContainer"]
margin_left = 165.0
margin_top = 46.0
margin_right = 416.0
margin_bottom = 65.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "random"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="UI/Panel/GridContainer"]
margin_top = 69.0
margin_right = 150.0
margin_bottom = 88.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "rule"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rule" type="Label" parent="UI/Panel/GridContainer"]
margin_left = 165.0
margin_top = 69.0
margin_right = 416.0
margin_bottom = 88.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "0/255"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuleInput" type="PanelContainer" parent="UI"]
margin_left = 550.0
margin_right = 843.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/RuleInput"]
margin_left = 5.0
margin_top = 5.0
margin_right = 288.0
margin_bottom = 47.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/RuleInput/VBoxContainer"]
margin_right = 283.0
margin_bottom = 19.0
custom_constants/separation = 0

[node name="2" type="Label" parent="UI/RuleInput/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "go to rule "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rule" type="Label" parent="UI/RuleInput/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 240.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="UI/RuleInput/VBoxContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 256.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "_"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/RuleInput/VBoxContainer/HBoxContainer/3"]
autoplay = "Blink"
anims/Blink = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="4" type="Label" parent="UI/RuleInput/VBoxContainer"]
margin_top = 23.0
margin_right = 283.0
margin_bottom = 42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "(press enter)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvalidRule" type="PanelContainer" parent="UI"]
visible = false
margin_left = 550.0
margin_right = 692.0
margin_bottom = 29.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="UI/InvalidRule"]
margin_left = 5.0
margin_top = 5.0
margin_right = 137.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "invalid rule"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI/InvalidRule"]
wait_time = 2.0
